dnl Process this file with autoconf to produce a new configure script
dnl if it has changed. 
dnl ---------------------------------------------------------------------------------

AC_MSG_CHECKING([adass-proceedings config])

AC_INIT(README.md)

AP="`pwd`"
AC_SUBST(AP)

AC_OUTPUT(ap_start.csh)
AC_OUTPUT(ap_start.sh)

